--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,10 @@
 title: Silvana Morera Claramunt - Technical Writer Portfolio
 email: silvana.morera@gmail.com
 description: Developer-focused documentation, API references, and technical tutorials.
-github_username:  silvanaMorera
+github_username: silvanaMorera
+
+baseurl: ""
+url: ""
 
 # Build settings
 theme: minima
